# sfs-cli

./: .dirprofile  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  go.mod  go.sum
.github/workflows/: build-release.yml  rust.yml  test.yml
cli/deployCmd/: deploy.go
cli/serveCmd/: serve.go
cmd/main/: main.go
constants/: constants.go
globals/: globals.go
lib/: get_ipv4.go  parse_abs_path.go  parse_get_abs_files.go
sfserver/: routes.go  server.go
sfserver/config/: config.go
sfserver/db/: db.go
sfserver/db/models/: models.go
sfserver/handlers/: fs_handlers.go  shared_handlers.go
sfserver/middlewares/: fs_middlewares.go  middlewares.go
sfserver/serverconst/: constants.go
sfserver/serverglobals/: globals.go
sfserver/serverlib/: shared.go
sfserver/serverlib/cachelib/: cache_client.go
sfserver/serverlib/fslib/: fslib.go
sfserver/serverlib/storagelib/: interface.go
sfserver/servertypes/: rest.go
src/: config.rs  constants.rs  main.rs  state.rs
src/api/: auth.rs  dirtree.rs  fs_files.rs  mod.rs  tokens.rs  uploads.rs  usage.rs  utils.rs
src/cmd/: auth.rs  blob.rs  config.rs  dirtree.rs  metadata.rs  mod.rs  serve.rs  tokens.rs  usage.rs
src/shared_types/: api.rs  cmd.rs  mod.rs  tokens.rs  uploads.rs  usage.rs
src/shared_types/models/: dirtree.rs  fs_files.rs  mod.rs
src/utils/: chirpy_logs.rs  crypto.rs  dirtree.rs  files.rs  filters.rs  local_auth.rs  misc.rs  mod.rs  net.rs  paths.rs  str2x.rs  streams.rs  term.rs  tokens.rs  url.rs  x2str.rs
