[package]
name = "sfs-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
confique = { version = "0.3.0", features = ["toml"] }
inquire = "0.7.5"
once_cell = "1.20.2"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking", "json", "multipart", "stream"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tiny_http = "0.12.0"
url = "2.5.4"
urlencoding = "2.1.3"
walkdir = "2.5.0"
anyhow = "1.0.93"
toml = "0.8.19"
zip = "2.2.1"
dirs = "5.0.1"
dialoguer = { version = "0.11.0", features = ["password"] }
tokio = { version = "1.41.1", features = ["full"] }
phf = { version = "0.11.2", features = ["macros"] }
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
base64 = "0.22.1"
futures-util = "0.3.31"
serde_with = "3.11.0"
nucleo-matcher = "0.3.1"
terminal_size = "0.4.1"
